--- a/webserver/templates/nginx.conf.template
+++ b/webserver/templates/nginx.conf.template
@@ -30,10 +30,10 @@ server {
 	#ssl_dhparam /etc/letsencrypt/ssl-dhparam.pem;
 	include /etc/letsencrypt/options-ssl-nginx.conf;
 
-	add_header X-Frame-Options "SAMEORIGIN";
-	add_header X-Content-Type-Options "nosniff";
+	add_header X-Frame-Options	"SAMEORIGIN";
+	add_header X-Content-Type-Options	"nosniff";
 
-	charset utf-8;	
+	charset	utf-8;	
 	
 	root /var/www/html/webapp/public;
 	index index.php;
@@ -41,25 +41,35 @@ server {
 	location / {
 		try_files $uri /index.php$is_args$args;
 	}
-	
-	location = /favicon.ico { access_log off; log_not_found off; }
-	location = /robots.txt  { access_log off; log_not_found off; }
-	
-	error_page 404 /index.php;
 
 	location ~ \.php$ {
 		# Pass the PHP requests to FastCGI server (php-fpm) on 127.0.0.1:9000
 		fastcgi_pass	docker_laravel;
-		fastcgi_index index.php;
+		fastcgi_index	index.php;
 		fastcgi_param	SCRIPT_FILENAME	$document_root$fastcgi_script_name;
-		include fastcgi_params;		
+		include	fastcgi_params;		
     }
 	#
 	# deny access to .htaccess vb. files, if Apache's document root
 	location ~/\. {
 		deny all;     
 		log_not_found off;
-	}	
+	}
+	#
+	location ~ /.well-known {
+		allow all;
+	}
+	#
+	location = /favicon.ico {
+		log_not_found off;
+		access_log off;
+	}
+	#
+	location = /robots.txt {
+		allow all;
+		log_not_found off;
+		access_log off;
+	}
 	#
 	access_log off;
 	error_log  /var/log/nginx/${NGINX_HOST}.error.log error;
