--- a/webserver/templates/nginx.conf.template
+++ b/webserver/templates/nginx.conf.template
@@ -35,11 +35,11 @@ server {
 
 	charset	utf-8;	
 	
-	root /var/www/html/webapp/public;
+	root /var/www/html/public;
 	index index.php;
 	
 	location / {
-		try_files $uri /index.php$is_args$args;
+		try_files $uri $uri/ /index.php$is_args$args;
 	}
 
 	location ~ \.php$ {
